# research-writer-agent

./: .gitignore  pyproject.toml
docs/: full-report.md  overview.md
src/: pydantic_writer.py
src/examples/: langraph_writer.py
