[tool.poetry]
name = "research-writer"
version = "0.1.0"
description = "A research and writer agent"
authors = ["motypes <mohammed.jalil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
